# BakaBot

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.deps  bot.conf.example  config.json.example
cmake/Modules/: FindJsoncpp.cmake  FindMsgpack.cmake
libsock/: Makefile
libsock/include/: connection.h  server.h
libsock/src/: connection.cpp  listener.cpp
run/: bot.conf.example  setup.lua
run/lang/: en_GB.conf
src/: CMakeLists.txt  admin.cpp  admin.h  bot.cpp  bot.h  botconfig.h.example  config.cpp  config.h  ircbot.cpp  ircconnection.cpp  ircconnection.h  logger.cpp  logger.h  lua.cpp  lua_plugin.h  main.cpp  user.h  util.cpp  util.h
src/commands/: command.cpp  command.h  command_data.cpp  permissions.cpp  permissions.h
src/data/: channel.h  data.cpp  data.h  ircchannel.h  ircuser.h  user.h
src/event/: event.cpp  events.h
src/irc/: ircbot.h  ircconnection.cpp
src/plugins/: Makefile  sed.cpp
src/plugins/sed/: sed.cpp
src/util/: misc.cpp  misc.h
